--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>IOS Developer <br >
-						Portland, Oregon
-					</h1>
+					<h1>IOS Developer</h1>
 				</div>
 			</header>
 
